--- a/manuscript/manual.bib
+++ b/manuscript/manual.bib
@@ -1,3 +1,11 @@
+@article{Alberdi2018,
+author={Alberdi, Anton and Aizpurua, Ostaizka and Bohmann, Kristine and Gopalakrishnan, Shyam and Lynggaard, Christina and Nielsen, Martin and Gilber, Marcus Thomas Pius},
+title={Promises and pitfalls of using high-throughput sequencing for diet analysis},
+year={2018},
+volume={Online Early View},
+journal={Molecular Ecology},
+pages={},
+doi={https://doi.org/10.1111/1755-0998.12960}}
 @article{Gravel2018,
 author={Gravel, Dom and Baiser, Ben and Dunne, Jennifer A and Kopelke, Jens-Peter and Martinez, Neo D and Nyman, Tommi and Poisot, Tim and Stouffer, Daniel B and Tylianakis, Jason and Wood, Spencer A and Roslin, Tomas},
 title={Bringing Elton and Grinell together: a quantitative framework to represent the biogeography of ecological interactions},
