--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -50,7 +50,7 @@
 	\textbf{R:} We appreciate the thoughtful feedback by the four referees. We take particular note of the comments regarding the structure and grounding of our introduction and have worked to address them. 
 
 
-	Reviewer 2 takes a different view of the purpose and scope of the manuscript from that of the other reviewers. We respect his/her ideas but feel that some are beyond the scope of the present manuscript. In particular, we do not feel that a full simulation study is necessary given the simplicity of our framework. We emphasise that we are not introducing a software package (although we do provide simple code to aid those who are new to the field), nor are we introducing an entirely new framework (as the other Reviewers point out, many components of our approach have been touched on by previous work). Thus, the novelty and impact of our work explicitly lies in connecting a Bayesian statistical approach to the problem of limited and uneven sampling of networks (driven by difference in species abundances, detectabilities, constrained time and budgets, etc.) and, we hope, in making this method more accessible to those without extensive statistical or modelling experience. Please note that Reviewer 3 identified this need explicitly. 
+	Reviewer 2 takes a different view of the purpose and scope of the manuscript from that of the other reviewers. We respect his/her ideas but feel that some are beyond the scope of the present manuscript. In particular, we do not feel that a full simulation study is necessary given the simplicity of our framework. We emphasise that we are not introducing a software package (although we do provide simple code to aid those who are new to the field), nor are we introducing an entirely new framework (as the other Reviewers point out, many components of our approach have been touched on by previous work). Thus, the novelty and impact of our work explicitly lies in connecting a Bayesian statistical approach to the problem of limited and uneven sampling of networks (driven by difference in species abundances, detectabilities, constrained time and budgets, etc.) and, we hope, in making this method more accessible to those without extensive statistical or modelling experience. Moreover, we believe that introducing a more coherent framework for thinking about uncertainty and bringing some order to the myriad different causes behind it are also valuable contributions (with the proviso that our ``levels" of uncertainty are a conceptual guide rather than a rigorously-tested breakdown). Please note that Reviewer 3 identified the need for a coherent, general approach to uncertainty explicitly, and several of the reviewers appreciated our partial formalisation. 
 	% Tomas has a line break here, I'm not sure.
 	Because of the difference between Reviewer 2 and the other Reviewers, we have opted to prioritise the majority view and focused first on comments by Reviewers 1, 3, and 4. However, we hope and trust that, in the course of these revisions, we have at least partially addressed Reviewer 2's concerns as well. 
 
@@ -151,7 +151,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} We thank the Reviewer for the literature suggestions and now include them in our introduction and/or discussion. We emphasise the broad applicability of our approach across network types and systems with varying degrees of prior knowledge. We also emphasise that our approach is not restricted to species observed X times (as many predictive models are) and can include species not yet observed at a site (e.g., potential invaders). Finally, we note that there is a need to synthesise the literature on sampling issues and formalise the sources of uncertainty affecting the estimation of pairwise interactions. There are, as the Reviewer notes, already a number of publications addressing probabilistic interactions, but none of them adequately characterise uncertainty about interactions. We hope that the contribution our manuscript makes is now clearer.
+		\textbf{R:} We thank the Reviewer for the literature suggestions and now include them in our introduction and/or discussion. We emphasise the broad applicability of our approach across network types and systems with varying degrees of prior knowledge. We also emphasise that our approach is not restricted to species observed X times (as many predictive models are) and can include species not yet observed at a site (e.g., potential invaders). Finally, we note that there is a need to synthesise the literature on sampling issues and formalise the sources of uncertainty affecting the estimation of pairwise interactions. There are, as the Reviewer notes, already a number of publications addressing probabilistic interactions, but none of them adequately characterise uncertainty about interactions. We hope that the contribution made by our manuscript is now clearer.
 
 
 	6. Potential contradiction 
@@ -271,7 +271,7 @@
 		What Reviewer 2 proposes would be more suitable for an entirely novel method and is substantially beyond the scope of the present study. There is indubitably a place for simulation studies in order to find the most powerful method once a variety of tools are in common use, especially for researchers aiming to convince modellers that their tool is more powerful. Our manuscript, however, is not aimed at those already comfortable with Bayesian approaches but rather at those who may be aware of the problems of uneven uncertainty but not aware of any way to include this information in their analyses. We are confident that even a very simple model which incorporates the differences in sampling across interactions (as ours does) is more powerful than a model which ignores this information completely, and we therefore do not intend to conduct a full-scale simulation study. We accept that this means that those already using more intricate Bayesian methods are unlikely to switch to our simpler version; it was never our intention that they should do so.
 
 
-		We must also point out that some of the Reviewer's questions (e.g., how much data is necessary to expect good results) have already been answered analytically. Without an informative prior, we need approximately 35 observed co-occurrences with no observed interaction to be 95\% confident that the interaction does not occur. We also provide simple R code that will allow interested readers to analytically explore the response of confidence intervals, etc. to different amounts of data and different strengths of priors. While a simulation study could help to develop intuitions about changing field conditions, these analytical responses are exact and more general.
+		We must also point out that some of the Reviewer's questions (e.g., how much data is necessary to expect good results) are answered analytically in our manuscript. Without an informative prior, we need approximately 35 observed co-occurrences with no observed interaction to be 95\% confident that the interaction does not occur. We also provide simple R code that will allow interested readers to analytically explore the response of confidence intervals, etc. to different amounts of data and different strengths of priors. While a simulation study could help to develop intuitions about changing field conditions, these analytical responses are exact and more general.
 
 
 	5. Request for an extended results and discussion section
@@ -301,9 +301,9 @@
 		\textbf{R:} 
 			\begin{itemize}
 				\item As described above, we have now indexed $L$, $T$, $X$, $D$, etc. by $ij$. 
-				\item $T$ describes trait matching, so it is a characterisation on $i$ and $j$ together. 
+				\item $T$ describes trait matching, so it is a characterisation of $i$ and $j$ together. 
 				\item $D$ can be \textless1 because some interactions are detectable but with a lower probability due to limitations in sampling techniques, sampling time, etc. With infinite monitoring time and capacity, all $D_{ij}$ would indeed be 0 or 1, but given real-world constraints that lead to otherwise-detectable interactions being missed, we feel it makes sense to discuss $0<D_{ij}<1$. For instance, consider a predator feeding upon two prey. If one of the prey (A) has many hard parts and is digested slowly, while the other has no hard parts and is digested quickly (B), the interaction involving prey A will be more detectable than the interaction involving prey B. The interaction with prey B is does not have D=0, because the interaction might be observed directly or through examination of gut contents very soon after B was consumed, but we cannot say that D=1 because we are quite likely not to detect this interaction in any given sample. 
-				\item Using L to mean the number of interactions is incredibly common in the food-web literature, especially when defining connectance (as in the instance the Reviewer points out - now included in the main text). That said, we appreciate that this useage may confuse mathematicians. We therefore now define the number of interactions as N and hope that this is less puzzling.
+				\item Using L to mean the number of interactions is common in the food-web literature, especially when defining connectance (as in the instance the Reviewer points out - now included in the main text). That said, we appreciate that this useage may confuse mathematicians. We therefore now define the number of interactions as N and hope that this is less puzzling.
 				\item Yes, the N on figure 4 should have been $n_{ij}$. This has been corrected. As discussed above, $n$ and $k$ are now always indexed by $ij$. 
 				\item We do not catch what the Reviewer is aiming at here. We hope that our revised introduction and methods have addressed this point; if not, we request that the Reviewer kindly provide some more detail so that we can address his/her concern.
 			\end{itemize}
@@ -423,7 +423,7 @@
 
 % ----------------------------------------------------------------------
 % ----------------------------------------------------------------------
-{\Large \bf Reply to Referee \#3}
+{\Large \bf Reply to Reviewer \#3}
 % ---------------------------------------
 
 	The Reviewer commented that our paper is, overall, very good and ``makes an important contribution'' as ``a very nice attempt to show the broader community that the Bayesian approach is not so complex and has many advantages``. We are glad that the Reviewer agrees about the importance of this message and appreciate his/her suggestions to improve the manuscript. We have taken care to add references and clarify the introduction, as well as to state explicitly that we are emphatically not suggesting that anyone sample with lower effort/intensity than they otherwise would. We considered the benefits of high-quality sampling to be so self-evident that it did not occur to us that our manuscript could be read as suggesting that extensive sampling is not worthwhile. We thank the Reviewer for pointing out the potential for confusion over this point and hope that it is now clear that Bayesian analyses are a complement to, not a replacement for, high-quality sampling. Below we address each of the Reviewer's suggestions (response preceded with \textbf{R:}) in detail.
@@ -485,7 +485,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} Yes, that is exactly the idea. We are also sure that this is a common approach and therefore hadn't cited it (in the same way one would not be likely to cite the prior users of common statistical tests). We have added a citation to~\citet{Vazquez2005,Guimera2009} as two examples and hope that this is sufficient.
+		\textbf{R:} Yes, that is exactly the idea. We are also sure that this is a common approach and therefore hadn't cited it (in the same way one would not be likely to cite the prior users of common statistical tests). We have now added a citation to~\citet{Vazquez2005,Guimera2009} as two examples and hope that this is sufficient.
 
 
 		\begin{refquote}
@@ -512,7 +512,7 @@
 		\begin{quotation}
         \textbf{Forbidden links}
 
-            Both whether species can ever interact and Both whether species can ever interact and whether they interact at a particular place and time have been discussed in the context of ``forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling, physiological constraints, etc. are considered ``structural zeros" that cannot be observed~\citep{Jordano1987,Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology~\citep{Gravel2013}. In such cases, links which are impossible due to physiological constraints remain forbidden but links previously ``forbidden" by spatio-temporal mismatch could potentially occur.
+            Both whether species can ever interact and whether they interact at a particular place and time have been discussed in the context of ``forbidden links"~\citep{Jordano2016}. In this framework, all links which are prevented by spatio-temporal uncoupling, physiological constraints, etc. are considered ``structural zeros" that cannot be observed~\citep{Jordano1987,Jordano2016}. We conceptually distinguish between physiological constraints and spatio-temporal uncoupling to allow for cases in which a species is introduced to a new habitat, expands its range, or shifts phenology~\citep{Gravel2013}. In such cases, links which are impossible due to physiological constraints remain forbidden but links previously ``forbidden" by spatio-temporal mismatch could potentially occur.
       \end{quotation}
 
 
@@ -528,7 +528,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} We have expanded our introduction of the case study (beginning line 302) to make it clear that we are using the highest-quality empirical network we can find as even such networks have uncertainty about unobserved interactions. This relates back to our point that urging increased sampling effort is not likely to solve problems of uncertainty as long as sampling is limited in the number of methodologies that can be applied, biased towards abundant or easy-to-identify species, restricted to particular spatial sites and/or environmental conditions (if the network is intended to be more general), or all of the above. Given budgetary constraints, it is extremely likely that empirical ecologists cannot sample as intensively and extensively as they would like and therefore some uncertainty is likely to remain. We repeat this point in the discussion to ensure that the case study is relevant. We have also clarified our statement that a strict application of Bayesian statistics does not allow empirical priors, but that they are an option for researchers that are more concerned about matching their prior to their study system than with strict formalism (lines 293-296). As Reviewer 1 points out, this is somewhat controversial and we feel it is important to note the potential objection.
+		\textbf{R:} We have now expanded our introduction of the case study (beginning line 302) to make it clear that we are using the highest-quality empirical network we can find as even such networks have uncertainty about unobserved interactions. This relates back to our point that urging increased sampling effort is not likely to solve problems of uncertainty as long as sampling is limited in the number of methodologies that can be applied, biased towards abundant or easy-to-identify species, restricted to particular spatial sites and/or environmental conditions (if the network is intended to be more general), or all of the above. Given budgetary constraints, it is extremely likely that empirical ecologists cannot sample as intensively and extensively as they would like and therefore some uncertainty is likely to remain. We repeat this point in the discussion to ensure that the case study is relevant. We have also clarified our statement that a strict application of Bayesian statistics does not allow empirical priors, but that they are an option for researchers that are more concerned about matching their prior to their study system than with strict formalism (lines 293-296). As Reviewer 1 points out, this is somewhat controversial and we feel it is important to note the potential objection.
 
 
 		\begin{quotation}
@@ -680,20 +680,21 @@
 		\end{refquote}
 
 
-		\textbf{R:} The point of our method is not actually to quantify the amount of sampling needed. Although the ideal sampling effort \emph{can} be calculated using the framework we put forward (as we demonstrate), the real point is to quantify how uncertain we are that an interaction we do not observe really does not occur. Given this, we do not think that recommending uncertainty be explicitly stated undermines our point. 
+		\textbf{R:} 
+		We emphasise that the estimate of 30-50 samples does not refer to the \emph{Salix}-galler-natural enemy test system but to a much more general interpretation of the problem. Without a prior distribution and with \emph{no prior information}, as long as we assume that interaction probabilities follow a beta distribution it will take 30-50 observations of two species co-occurring to be 95-99\% confident that the species do not interact. Sampling requirements will be much less if an interaction was observed (note that in the empirical example we assume an interaction was feasible if it was observed even once).
+
+
+		The point of our method is not actually to quantify the amount of sampling needed. Although the ideal sampling effort \emph{can} be calculated using the framework we put forward (as we demonstrate), the real point is to quantify how uncertain we are that an interaction we do not observe really does not occur. Given this, we do not think that recommending uncertainty be explicitly stated undermines our point. 
 
 
 		The Reviewer's suggestion that we might need fewer samples for species that are ``specialised or bound to interact for some other reason'' reflects a very strong prior. In this case, yes we would need fewer samples for the species concerned. With sufficiently strong priors, it is not necessary to sample at all! For example, in most food webs it is assumed that basal resources will never consume prey even if a given resource and a given animal are never observed co-occurring and it is generally accepted that there is very low uncertainty about these zeros. In many cases, the assumptions involved in excluding interactions are less clear-cut and different researchers may disagree about which species are ``bound to interact'' (or not to interact). The concept of pollination syndromes is one example - many flower visitors are less rigidly specialised on particular flower types than initially thought~\citep{Ollerton2009}. To address such ``forbidden links``, we now suggest that researchers explicitly state both the uncertainty about data-based zeros and the assumptions by which they create structural zeros. This will allow future researchers to evaluate the uncertainty about all interactions in a network as the state of expert knowledge changes. We hope that this expanded recommendation (lines 399-402) is clearer.
-
-
-		Finally, we emphasise that the estimate of 30-50 samples does not refer to the \emph{Salix}-galler-natural enemy test system but to a much more general interpretation of the problem. Without a prior distribution and with \emph{no prior information}, as long as we assume that interaction probabilities follow a beta distribution it will take 30-50 observations of two species co-occurring to be 95-99\% confident that the species do not interact. Sampling requirements will be much less if an interaction was observed (note that in the empirical example we assume an interaction was feasible if it was observed even once).
 
 
 \clearpage
 
 % ----------------------------------------------------------------------
 % ----------------------------------------------------------------------
-{\Large \bf Reply to Referee \#4}
+{\Large \bf Reply to Reviewer \#4}
 % ---------------------------------------
 
 
@@ -758,7 +759,7 @@
 		\textbf{R:} As we state in the section \textbf{Estimating uncertainty}, we usually cannot distinguish different sources of uncertainty in empirical data. Those studies which attempt to do so (e.g.,~\citet{Graham2018}) remove process uncertainty by assuming constant interaction probabilities during a short, intense sampling period and also assume that we know the true set of feasible interactions. This may be the case for Graham and Weinstein's relatively small and well-studied system but is not likely to be true for systems containing hundreds of species, systems containing recently-arrived species, systems just beginning to be studied, etc. A more generally-applicable approach is to test explicitly whether species always interact when co-occurring, whether interaction probability depends on the probability of co-occurrence, and whether both co-occurrence and interaction probabilities depend upon environmental conditions, as in~\citet{Gravel2018}. Note, however, that this study refers to the probability of an interaction occurring in a local realisation of a food web while we are concerned with metawebs in the present study.
 		
 
-		To make this clearer, we have rephrased this section and added a line (lines 65-72) stating that we usually cannot determine the cause of all the zeros in an interaction matrix (we can identify obviously unfeasible interactions, but likely cannot say whether a zero for a rare species is because we did not observe enough individuals, there were not enough individuals to perform a particular interaction, or because the interaction is actually unfeasible). We hope that this revision makes it clearer that the description of different sources of uncertainty is a conceptual guide only.
+		To make this clearer, we have rephrased this section and added a line (lines 65-72) stating that we usually cannot determine the cause of all the zeros in an interaction matrix (we can identify obviously unfeasible interactions, but likely cannot say whether a zero for a rare species is because we did not observe enough individuals, there were not enough individuals to engage in a particular interaction, or because the interaction is actually unfeasible). We hope that this revision makes it clearer that the description of different sources of uncertainty is a conceptual guide only.
 
 
 		\begin{quotation}
@@ -773,7 +774,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} As our manuscript is not concerned with partitioning sources of uncertainty, we felt it was unproductive to get bogged down in a debate over the precise definitions of process vs. interaction uncertainty and which external influences might contribute to which sources (there is enough overlap that simple statements such as ``bad weather increases process uncertainty'' are, at best, incomplete). To remove this problem, we have rephrased the introduction and discussion to refer to the questions of whether two species \emph{can} interact under ideal conditions and whether they \emph{do} interact at a given site and time. We hope that this reframing, and the addition of clear statements that our framework is not intended to separate different sources of uncertainty, will remove the Reviewer's confusion.
+		\textbf{R:} As our manuscript is not concerned with partitioning sources of uncertainty, we felt it was unproductive to get bogged down in a debate over the precise definitions of process vs. interaction uncertainty and which external influences might contribute to which sources (there is enough overlap that simple statements such as ``bad weather increases process uncertainty'' are, at best, incomplete); see above under response to Reviewer 3 for more details. To remove this problem, we have rephrased the introduction and discussion to refer to the questions of whether two species \emph{can} interact under ideal conditions and whether they \emph{do} interact at a given site and time. We hope that this reframing, and the addition of clear statements that our framework is not intended to separate different sources of uncertainty, will remove the Reviewer's confusion.
 
 
 		Our mention of habitat as a factor affecting the probability of species interacting at a site was not intended to refer to species using different habitats, but rather the possibility that habitat type might affect interaction probabilities. For example, a more open patch of forest might have different interaction probabilities than a denser patch even if the same set of species use both patches. The Reviewer is clearly correct that habitat also affects which species are present at a site. We included co-occurrence in process uncertainty since co-occurrence does not tell us much about whether an interaction is feasible under ideal conditions (which would certainly include co-occurrence). This speaks to our point above that external factors (habitat, weather, etc.) can affect multiple levels of uncertainty at once. In fact, habitat also likely affects detection uncertainty since it is often harder to observe interactions in dense vegetation. So, in short, separating sources of uncertainty based on the external factors which contribute to them is not a particularly useful endeavour and we have revised the manuscript to steer readers away from it.
@@ -790,7 +791,7 @@
 		\textbf{R:} Long-term interactions may be easier to detect, but this does not necessarily translate into reduced process uncertainty. Spatial variation in interaction probabilities will affect all interaction types, as does variation in abundances between years, so we cannot conceive of any interactions that are exempt from this issue. The timescale of an interaction (and the evidence it leaves) does affect detection uncertainty, so we have added a note in that section (lines 143-1246). Long-term interactions may still fail to be detected, however, and we now add an example to make it clear that detection uncertainty applies to even long-term interactions such as gall-forming (indeed, our results suggest that uncertainty in gall-forming is quite high). 
 
 
-		Perhaps more important is the effect of sampling interval. As sampling time increases toward infinity, interaction probabilities should converge to 0 or 1 with no uncertainty. As we discuss, however, sampling times are limited by resources, the trade-off between sampling a single site intensively versus many sites, etc. Any interaction could therefore occur outside of the sampling window and hence be missed.
+		Perhaps more important is the effect of sampling interval. As sampling time increases toward infinity, interaction probabilities should converge to 0 or 1 with no uncertainty. As we discuss, however, sampling times are limited by resources, by the trade-off between sampling a single site intensively versus many sites, etc. Any interaction could therefore occur outside of the sampling window and hence be missed.
 
 
 		Lines 143-146:
